pkg/loader/testdata/kustomize/multi-patch/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: myapp
          env:
            - name: LOG_LEVEL
              value: warn
